# mcp-mas-sequential-thinking

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  main_refactored.py  pyproject.toml  run_comprehensive_tests.sh  test_basic_mcp.py
.claude/: README.md  install-hooks.sh  manage-hooks.sh  settings.json  test-hooks.sh
.cursor/rules/: project_structure.mdc
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: codebase_structure.md  project_purpose.md  style_and_conventions.md  suggested_commands.md  task_completion_guidelines.md  tech_stack.md
docs/: README.md  architecture.md  deployment.md  troubleshooting.md  user-guide.md
docs/api/: README.md
docs/examples/: quickstart.md
src/: __init__.py  config.py  exceptions.py  main.py
src/context/: app_context.py  shared_context.py
src/error_handling/: __init__.py  circuit_breaker.py  error_context.py  error_handler.py
src/handlers/: __init__.py  team_coordinator.py  thought_processor.py
src/models/: analysis_models.py  core_models.py  protocols.py  thought_models.py  tool_models.py
src/prompts/: __init__.py  templates.py
src/providers/: base.py
src/team/: __init__.py  async_team.py
src/tools/: __init__.py  mcp_tools.py  tool_selector.py
tests/: __init__.py  conftest.py  test_analysis_models.py  test_async_team.py  test_config.py  test_context_advanced.py  test_dual_team_architecture.py  test_enhanced_app_context.py  test_error_handling.py  test_integration.py  test_integration_e2e.py  test_mcp_integration.py  test_mcp_tools.py  test_mcp_tools_previous_steps.py  test_prompts_templates.py  test_protocols.py  test_providers.py  test_scenarios.py  test_shared_context.py  test_shared_context_comprehensive.py  test_team_coordinator.py  test_thought_models.py  test_thought_models_split.py  test_thought_processor.py  test_tool_models.py  test_tool_selector.py
