[project]
name = "reflective-sequential-thinking"
version = "0.3"
description = "MCP Agent Implementation for Reflective Sequential Thinking"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "cognitive-glitch", email = "intuitionwith@gmail.com" },
    { name = "Frad LEE", email = "fradser@gmail.com" },               # Original Author
]
dependencies = [
    "agno",
    "asyncio",
    "exa-py",
    "python-dotenv",
    "mcp",
    "groq",
    "pydantic",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy", "pyright", "ruff"]

[project.scripts]
mcp-mas-sequential-thinking = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
