[project]
name = "reflective-sequential-thinking"
version = "0.3"
description = "MCP Agent Implementation for Reflective Sequential Thinking"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "cognitive-glitch", email = "intuitionwith@gmail.com" },
    { name = "Frad LEE", email = "fradser@gmail.com" },               # Original Author
]
dependencies = [
    "agno",
    "asyncio",
    "exa-py",
    "python-dotenv",
    "mcp",
    "groq",
    "pydantic",
    "networkx>=3.5",
    "google-genai>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy", "pyright", "ruff"]

[project.scripts]
mcp-mas-sequential-thinking = "main:run"
reflective-sequential-thinking-mcp = "main:run"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]
packages = ["context", "models", "providers", "tools"]

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-asyncio>=1.0.0"]
